src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Max_Advance_Paid_Off__c</fullName>
        <label>Max Advance Paid Off</label>
        <summarizedField>Opportunity.Advance_Payoff_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Merchant_s_Processing_Productivity__c</fullName>
        <inlineHelpText>Enter the number of new merchants per month.</inlineHelpText>
        <label>Merchant&apos;s Processing Productivity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_Remaining_On_Site_Lease_Mortgage__c</fullName>
        <label>Months Remaining On Site Lease/Mortgage</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Months_with_Current_Processor__c</fullName>
        <label>Months with Current Processor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Funded_Renewal_Date__c</fullName>
        <label>Most Recent Funded Renewal Date</label>
        <summarizedField>Opportunity.Time_For_Renewal_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Opp_Not_Processed__c</fullName>
        <description>In rescinded or Unqualified status</description>
        <label>Most Recent Opp Not Processed</label>
        <summarizedField>Opportunity.Time_For_Renewal_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Underwriting_Approval__c</field>
            <operation>equals</operation>
            <value>Approved, Approved by Credit Committee, Approved by Credit Committee with conditions, Approved - Pending Management Review, Auto Approved, Auto Declined, Declined, Declined by Credit Committee, Declined - Pending Management Review, Scheduled for credit co</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Renewal_Date__c</fullName>
        <label>Most Recent Renewal Date</label>
        <summarizedField>Opportunity.Time_For_Renewal_Date__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_Claw_back_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Claw-back Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Accounts</description>
        <label>No Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_days_from_last_renewal__c</fullName>
        <formula>(Last_Renewal_Date__c - Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days from last renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Merchants_in_your_Books__c</fullName>
        <label>Number of Merchants in your Books</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Renewals__c</fullName>
        <description>The number of Renewals associated with this Account.</description>
        <label>Number of Renewals</label>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Terminals_at_Location__c</fullName>
        <label>Number of Terminals at Location?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Bus_Dev_Visit__c</fullName>
        <label>On Site Bus. Dev. Visit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>On_Site_Training__c</fullName>
        <label>RA On Site Sales Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Commissions__c</fullName>
        <description>override commissions</description>
        <label>Override Commissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owned_Business_Since__c</fullName>
        <label>Owned Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPT_Partner_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPT Partner Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerForce_Training_Complete__c</fullName>
        <label>PartnerForce Training Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Bank_Wiring_Instructions__c</fullName>
        <label>Partner Bank Wiring Instructions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Training_Complete__c</fullName>
        <label>Partner Training Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partnerforce_Tutorial_Sent__c</fullName>
        <label>Partnerforce.com Tutorial Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Percent_Paid_Off__c</fullName>
        <description>percent paid off for last renewal</description>
        <label>Percent Paid Off</label>
        <summarizedField>Opportunity.Percent_Paid_Off__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Present_Management_Since__c</fullName>
        <label>Present Management Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Cash_Advance_Experience__c</fullName>
        <inlineHelpText>Has the potential partner sold cash advances before?</inlineHelpText>
        <label>Previous Cash Advance Experience?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_on_New_Deals__c</fullName>
        <label>Pricing on New Deals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricing_on_Renewals__c</fullName>
        <label>Pricing on Renewals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryBankName__c</fullName>
        <label>Primary Bank Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_Relationship__c</fullName>
        <inlineHelpText>Is the Potential Partner terminating its relationship with its cash advance provider or are they simply adding another cash provider to their product offering?</inlineHelpText>
        <label>RA Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Partner Ending Relationship With Currnet Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Adding RA as Additional Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Flag__c</fullName>
        <formula>IF(  (TODAY()- Max_Advance_Paid_Off__c)&lt;=15,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;rating&quot;),if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=30,IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;rating&quot;), if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=60,IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;rating&quot;),if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=90,IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;rating&quot;),if( (TODAY()- Max_Advance_Paid_Off__c)&lt;=150,IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;rating&quot;),IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;rating&quot;)))) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_up_Approved__c</fullName>
        <label>Roll up Approved</label>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Approved_Flag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Contract Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Fund_Set_Up__c</fullName>
        <label>Split Fund Set-Up</label>
        <picklist>
            <picklistValues>
                <fullName>ACH Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS - Rocky Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RapidAdvance Chooses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSLynk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EVO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humboldt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONEPAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayProTec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nationwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Starter_and_Loan_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starter and Loan Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <description>SubIndustry</description>
        <label>SubIndustry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>First Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPayments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Remaining_On_Lease__c</fullName>
        <label>Time Remaining On Site Lease/Mortgage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Merchants_In_Portfolio__c</fullName>
        <inlineHelpText>Enter the total number of merchants in the acquirer&apos;s / ISO portfolio.</inlineHelpText>
        <label>Total Merchants In Portfolio</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Partner_s_Sales_Reps__c</fullName>
        <label>Total Number of Partner&apos;s Sales Reps</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tri_Fold_Brochure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tri-Fold Brochure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Types_of_AF_Programs_your_Company_Offers__c</fullName>
        <label>Types of AF Programs your Company Offers</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Language__c</fullName>
        <label>Upsell Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Mailing_Address_in_Correspondence__c</fullName>
        <label>Use Mailing Address in Correspondence?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>W_9_Form_Received__c</fullName>
        <label>W-9 Form Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_Package_Executed_Contract_Sent__c</fullName>
        <label>Welcome Package Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>What_Are_You_Looking_for_in_an_AF_Comp__c</fullName>
        <label>What Are You Looking for in an AF Comp?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_Services_Products_Do_You_Provide__c</fullName>
        <label>What Services/Products Do You Provide?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_Avg_Deal_Size__c</fullName>
        <label>What is the Avg Deal Size?</label>
        <picklist>
            <picklistValues>
                <fullName>0-5k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5k-15k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15k-25k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25k+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_Closes_The_Deal__c</fullName>
        <label>Who Closes The Deal?</label>
        <picklist>
            <picklistValues>
                <fullName>ISO Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RapidAdvance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Agent – AE assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Write_Off_Date__c</fullName>
        <label>Write Off Date</label>
        <summarizedField>Opportunity.Write_Off_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X4_Month_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Month Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_in_Business__c</fullName>
        <label>Years in Business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>linkshare_flag__c</fullName>
        <label>linkshare flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>missing_opportunity_id__c</fullName>
        <label>missing opportunity id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>renewal_count__c</fullName>
        <label>renewal count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tracking_sanaa__c</fullName>
        <label>tracking sanaa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Identification_Number__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Base Rate</label>
    </listViews>
    <listViews>
        <fullName>BusDev01ContractstoSend</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Contract_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/21/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Merchant Acquirer,Processor</value>
        </filters>
        <label>BusDev01 - Contracts to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev03WelcomePackagestoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Welcome_Package_Executed_Contract_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev03 - Welcome Packages to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev04GoToMtgTrainingstoComplete</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>GoToMtg_Training_Complete__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Contract_Received_Signed__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/21/2012 12:00 AM</value>
        </filters>
        <label>BusDev04 - GoToMtg Trainings to Complete</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev05WiringInstructstoCollect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Partner_Bank_Wiring_Instructions__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev05 - Wiring Instructs to Collect</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev06W9FormstoCollect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>W_9_Form_Received__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev06 - W-9 Forms to Collect</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev07CalculatorstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Who_Closes_The_Deal__c</field>
            <operation>equals</operation>
            <value>ISO Agent</value>
        </filters>
        <filters>
            <field>Calculator_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev07 - Calculators to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev08PrtnrforceTutorialstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Partnerforce_Tutorial_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev08 - Prtnrforce Tutorials to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev09CrystalRepTutorialstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Welcome_Package_Executed_Contract_Sent__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CrystalReports_com_Tutorial_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev09 - CrystalRep Tutorials to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev10PartnerSetUpstoComplete</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Welcome_Package_Executed_Contract_Sent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>Business_Development_Process_Completed__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev10 - Partner Set Ups to Complete</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BusDev11MarketingMaterialstoSend</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Welcome_Package_Executed_Contract_Sent__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>GoToMtg_Training_Complete__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Marketing_Materials_Sent__c</field>
            <operation>equals</operation>
        </filters>
        <label>BusDev11 - Marketing Materials to Send</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CustomerIDListing</fullName>
        <columns>Customer_Identification_Number__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>Customer ID Listing</label>
    </listViews>
    <listViews>
        <fullName>Fleischmann_Contracts_Received</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Received_Signed__c</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Contract_Received_Signed__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fleischmann Contracts Received</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fleischmann_ContractstoReceive</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contract_Sent__c</columns>
        <columns>Account_Contact__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partners</value>
        </filters>
        <filters>
            <field>Contract_Received_Signed__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Contract_Sent__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fleischmann Contracts to Receive</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
</CustomObject>